Fix scrollbar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,3 +1,8 @@
+* {
+  font-family: "Verdana", sans-serif;
+  font-size: 1em;
+}
+
 html {
   height: 95%;
 }
@@ -80,7 +85,7 @@ body {
 
 .text-area {
   width: 85%;
-  height: 100%;
+  height: 85%;
   background-color: transparent;
   border: none;
   border-radius: 2em;
@@ -89,10 +94,9 @@ body {
   text-shadow: 1px 1px 1px #FFF000;
   cursor: default;
   margin-left: 1%;
-  font-family: "Verdana", sans-serif;
-  font-size: 1.2em;
   color: #E47100;
   padding: 0.4em;
+  margin-top: 5px;
 }
 
 .message {
@@ -101,14 +105,12 @@ body {
   margin: 0.5em;
   border-radius: 0.5em;
   padding: 0.5em;
-  font-family: "Verdana", sans-serif;
-  font-size: 1.2em;
   color: #8E1400;
   box-shadow: 0px 2px 5px;
 }
 
 ::-webkit-scrollbar {
-    width: 1.5em;
+    width: 1em;
 }
 
 ::-webkit-scrollbar-track {
